# tandemn-efficiency-index

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  OBSERVABILITY.md  README.md  go.mod  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
cmd/tei/: main.go
helm/tei/: Chart.yaml  README.md  values-production.yaml  values.schema.json  values.yaml
helm/tei/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
internal/cli/: root.go  root_test.go
internal/control/: client.go  client_test.go  portforward.go
internal/tui/: browser.go  model.go  model_test.go
smoketest/: README.md  __init__.py  mock_data.py  run_dashboard.py  test_mock_data.py
src/tandemn_efficiency_index/: __main__.py  app.py  cli.py  control.py  kubernetes_discovery.py  observability.py  observer.py  pod_attribution.py  storage.py  workload_detection.py
src/tandemn_efficiency_index/dynamo/: workload_detection.py  workload_intent.py
src/tandemn_efficiency_index/models/: cluster_snapshot.py  observation.py  report.py  telemetry.py  workload.py
src/tandemn_efficiency_index/prometheus/: client.py  dcgm.py  generic.py  vllm.py
src/tandemn_efficiency_index/ray/: workload_detection.py
src/tandemn_efficiency_index/ui/: __init__.py  app.js  index.html  styles.css
tests/integration/: test_cluster_scenario.py  test_prometheus_contract.py
tests/unit/: test_app.py  test_control.py  test_kubernetes_discovery.py  test_observability.py  test_observer.py  test_pod_attribution.py  test_storage.py  test_workload_detection.py
tests/unit/dynamo/: test_workload_detection.py  test_workload_intent.py
tests/unit/models/: test_cluster_snapshot.py
tests/unit/prometheus/: test_client.py  test_dcgm.py  test_generic.py  test_vllm.py
tests/unit/ray/: test_workload_detection.py
