[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tandemn-efficiency-index"
version = "0.1.0"
description = "Tandemn Efficiency Index"
requires-python = ">=3.12"
dependencies = [
    "kubernetes>=30.0.0",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=8.2.0",
    "ruff>=0.5.0",
    "types-pyyaml>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tandemn_efficiency_index"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
packages = ["tandemn_efficiency_index"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "kubernetes.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
